nodejs-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-application
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nodejs-application
    spec:
      imagePullSecrets:
        - name: docker-io-credentials
      containers:
        - name: nodejs-application-server
          image: 'docker.io/chetangsanghi/nodejs-example:1.0.0-latest'
          imagePullPolicy: Always
