nodejs-route-secured.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs-route-secured
  labels:
    app: nodejs-application
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  to:
    kind: Service
    name: nodejs-service
  port:
    targetPort: 3000
  tls:
    termination: edge
